[workspace]
members = [
  "crates/bellow-rt",
  "crates/bellow-core",
  "crates/bellow-ipc",
  "crates/bellow-daemon",
  # Note: bellow-napi is built separately via `npx @napi-rs/cli build` because
  # it requires Node.js headers (libnode.dll on Windows, node on Unix).
  # "crates/bellow-napi",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.78"
authors = ["Sethun <sethunthunder111>"]
license = "MIT"
repository = "https://github.com/sethunthunder111/bellow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "io-util", "macros"] }
thiserror = "1.0"
