[package]
name = "bellow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Audio engine core: graph, scheduler, mixer"

[dependencies]
bellow-rt = { path = "../bellow-rt" }
bellow-decode = { path = "../bellow-decode" }
bellow-io = { path = "../bellow-io" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
