[package]
name = "bellow-decode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Audio file decoder front-end (Symphonia) for the Bellow audio engine"

[dependencies]
bellow-rt = { path = "../bellow-rt" }
bellow-core = { path = "../bellow-core" }

symphonia = { version = "0.5", features = ["all", "opt-simd"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
