[package]
name = "bellow-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Audio device I/O (CPAL) for the Bellow audio engine"

[dependencies]
bellow-rt = { path = "../bellow-rt" }
bellow-core = { path = "../bellow-core" }
bellow-resample = { path = "../bellow-resample" }

cpal = "0.15"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"

[dev-dependencies]
