[package]
name = "bellow-meter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Audio metering (peak, RMS, LUFS) for the Bellow audio engine"

[dependencies]
bellow-rt = { path = "../bellow-rt" }
bellow-core = { path = "../bellow-core" }

thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
