[package]
name = "bellow-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "NAPI-RS addon for in-process Bun/Rust communication"

[lib]
crate-type = ["cdylib"]

[dependencies]
bellow-core = { path = "../bellow-core" }
napi = { version = "2.16", default-features = false, features = ["napi9"] }
napi-derive = "2.16"
lazy_static = "1.5"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
